# infrahub-demo-edge

./: .gitignore  .infrahub.yml  README.md  ansible-requirements.yml  demo.py  device_startup_config.tpl.j2  device_startup_info.gql  docker-compose.yml  infrahub.toml  pyproject.toml  tasks.py  topology.clabs.yml  topology.tpl.j2  topology_info.gql
.devcontainer/: devcontainer.json  onCreateCommand.sh  postCreateCommand.sh
checks/: check_backbone_link_redundancy.gql  check_backbone_link_redundancy.py  check_bgp_transit_session.gql  check_bgp_transit_session.py  check_transit_circuit_redundancy.gql  check_transit_circuit_redundancy.py  utils.py
generators/: SonyBgpTransitPeering.py  SonyIXPBGPPrivatePeering.py  SonyRegionMesh.py  backbone_service.gql  backbone_service.py  circuit_endpoints.gql  circuit_endpoints.py  drained_circuit_bgp_sessions.gql  drained_circuit_bgp_sessions.py  upstream_interfaces.gql  upstream_interfaces.py  utils.py
models/: infrastructure_base.yml  infrastructure_edge.py
playbooks/: avd-config.yml  inventory.yml
templates/: arista_avd_bgp.yaml.j2  arista_bgp_config.j2  arista_interfaces_config.j2  arista_router_config.gql  arista_router_config.j2  device_startup_bgp.gql  device_startup_bgp.j2  device_startup_config.tpl.j2  device_startup_info.gql  device_startup_interfaces.gql  device_startup_interfaces.j2
tests/: conftest.py  test_all.yml  test_graphql.yml  test_transform_python.yml  tests_check.yml  tests_graphql.yml  tests_transform_j2.yml  tests_transform_python.yml
topology/: topo2.clabs.yml  topology.clabs.yml  topology.tpl.j2  (+1 more)
(+22 files in other folders)
