[tool.poetry]
name = "infrahub-demo-edge"
version = "0.1.0"
description = ""
authors = ["Damien Garros <dgarros@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
infrahub = {path = "../infrahub", develop=true}
typer = "^0.7"
black = "^22.3.0"
pygnmi = "^0.6.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
