[tool.poetry]
name = "infrahub-demo-edge"
version = "0.1.0"
description = ""
authors = ["Damien Garros <dgarros@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9, < 3.12"
infrahub-sdk = "0.5.0"
typer = "^0.7"
pygnmi = "^0.6.9"
invoke = "^2.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^22.3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests"
]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
